--- a/Mock_Exam/Exam_2/test4.yaml
+++ b/Mock_Exam/Exam_2/test4.yaml
@@ -13,4 +13,4 @@ spec:
           service:
             name: my-video-service
             port:
-              number: 8080  # 30093이 아닌 이유를 아직 못찾고 있음.
+              number: 8080
