--- a/Lightning-Labs/Lab_1/quiz.yaml
+++ b/Lightning-Labs/Lab_1/quiz.yaml
@@ -8,7 +8,99 @@ Mount this in a pod called logger at the location /var/www/redis. This pod shoul
 
 Answer:
 
-pv 와 pvc acceessModes는 동일해야 한다.
+apiVersion: v1
+
+kind: PersistentVolume
+
+metadata:
+
+  name: log-volume
+
+  labels:
+
+    type: local
+
+spec:
+
+  storageClassName: manual
+
+  capacity:
+
+    storage: 1Gi
+
+  accessModes:
+
+    - ReadWriteMany
+
+  hostPath:
+
+    path: "/opt/volume/redis"
+---
+apiVersion: v1
+
+kind: PersistentVolumeClaim
+
+metadata:
+
+  name: log-claim
+
+spec:
+
+  storageClassName: manual
+
+  accessModes:
+
+    - ReadWriteMany
+
+  resources:
+
+    requests:
+
+      storage: 200Mi
+---
+apiVersion: v1
+
+kind: Pod
+
+metadata:
+
+  name: logger
+
+spec:
+
+  volumes:
+
+    - name: task-pv-storage
+
+      persistentVolumeClaim:
+
+        claimName: log-claim
+
+  containers:
+
+    - name: logger
+
+      image: redis:alpine
+
+      ports:
+
+        - containerPort: 80
+
+          name: "http-server"
+
+      volumeMounts:
+
+        - mountPath: "/var/www/redis"
+
+          name: task-pv-storage
+
+
+
+
+
+
+# pv 와 pvc acceessModes는 동일해야 한다.
+# 
 ---
 Quiz2:
 
@@ -31,7 +123,7 @@ Answer:
 
 
 kubectl create namesapce dvl1987
-kubectl run pod time-check -n dvl1987 --image=busybox --dry-run=client -o yaml > test.yaml
+kubectl run time-check -n dvl1987 --image=busybox --dry-run=client -o yaml > test.yaml
 
 command: ['sh', '-c', 'while true; do date; sleep $TIME_FREQ;done > /opt/time/time-check.log']
 
