--- a/sandbox/test-secret-file.yaml
+++ b/sandbox/test-secret-file.yaml
@@ -1,17 +1,26 @@
 apiVersion: v1
+kind: Secret
+metadata:
+  name: dotfile-secret
+data:
+  .secret-file: dmFsdWUtMg0KDQo=
+---
+apiVersion: v1
 kind: Pod
 metadata:
-  name: secret-test-pod
-  labels:
-    name: secret-test
+  name: secret-dotfiles-pod
 spec:
   volumes:
   - name: secret-volume
     secret:
-      secretName: ssh-key-secret
+      secretName: dotfile-secret
   containers:
-  - name: ssh-test-container
-    image: nginx
+  - name: dotfile-test-container
+    image: registry.k8s.io/busybox
+    command:
+    - ls
+    - -al
+    - /etc/secret-volume
     volumeMounts:
     - name: secret-volume
       readOnly: true
